# zarrcompatibility

./: .gitignore  LICENSE  Makefile  README.md  change_protocol.md  mkdocs.yml  pyproject.toml  pytest.ini  rebuild.md  universal_zarr_serialization_docs_de.md  universal_zarr_serialization_docs_en.md  verify_code_loading.py  zarrcompatibility_issue_description.md
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml
docs/: api.md  examples.md  index.md  user_guide.md
prepared-for-ci/: ci_setup_guide.md  hinweise.md  zarr_compatibility_ci.yml
src/zarrcompatibility/: __init__.py  main.py  serialization.py  serialization.py.1  serializers.py  supported_zarr_versions.json  type_handlers.py  version_manager.py  zarr_patching.py
tests/: conftest.py  debug_runner.py  run_tests.py  test_error_handling.py  test_functionality.py  test_integration.py  test_isolation.py  test_performance.py  test_serialization.py  test_tuple_preservation.py  test_version_management.py  v3encoder_inspector.py  zarr_inspector.py
tests/testresults/: comprehensive_results.xml  pytest_summary.txt
